fixed background image on mobile

--- a/source/8ball/popup.css
+++ b/source/8ball/popup.css
@@ -7,7 +7,7 @@
     width: 300px;
     height: 400px;
     background-color: #f7f2e6;
-    box-shadow: 0px 0px 10px #000;
+    box-shadow: 0 0 10px #000;
     padding: 20px;
     z-index: 99;
     font-family: Stalker;
